src/parser/CmmParser.java
// Generated from C:/Users/monon/Desktop/lab04/src/parser\Cmm.g4 by ANTLR 4.8
package parser;

    import ast.*;
    import ast.definitions.*;
    import types.*;
    import types.complex.*;
    import types.complex.FunctionType;
    import types.simple.*;
    import types.record.*;
    import types.complex.FunctionType;
    import ast.statements.*;
    import ast.expressions.Expression;
    import ast.expressions.literal.*;
    import ast.expressions.other.*;
    import ast.expressions.binary.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, WS=36, COMENTARIOS=37, ID=38, 
		REAL_CONSTANT=39, INT_CONSTANT=40, CHAR_CONSTANT=41;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_vardef = 2, RULE_expr = 3, 
		RULE_primitiveType = 4, RULE_fundef = 5, RULE_funbody = 6, RULE_param = 7, 
		RULE_funinv = 8, RULE_args = 9, RULE_devuelve = 10, RULE_array = 11, RULE_arrayType = 12, 
		RULE_asignation = 13, RULE_struct = 14, RULE_structComponents = 15, RULE_mientras = 16, 
		RULE_si = 17, RULE_si_no = 18, RULE_write = 19, RULE_read = 20, RULE_listaChar = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "vardef", "expr", "primitiveType", "fundef", 
			"funbody", "param", "funinv", "args", "devuelve", "array", "arrayType", 
			"asignation", "struct", "structComponents", "mientras", "si", "si_no", 
			"write", "read", "listaChar"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "'('", "')'", "'['", "']'", "'.'", "'-'", "'/'", 
			"'*'", "'%'", "'+'", "'<'", "'>='", "'=='", "'!='", "'<='", "'>'", "'!'", 
			"'||'", "'&&'", "'int'", "'char'", "'double'", "'void'", "'{'", "'}'", 
			"'return'", "'='", "'struct'", "'while'", "'if'", "'else'", "'write'", 
			"'read'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"WS", "COMENTARIOS", "ID", "REAL_CONSTANT", "INT_CONSTANT", "CHAR_CONSTANT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cmm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program ast = new Program(0,0,new ArrayList<AbstractDefinition>());;
		public FundefContext fundef;
		public VardefContext vardef;
		public ArrayContext array;
		public StructContext struct;
		public List<FundefContext> fundef() {
			return getRuleContexts(FundefContext.class);
		}
		public FundefContext fundef(int i) {
			return getRuleContext(FundefContext.class,i);
		}
		public List<ArrayContext> array() {
			return getRuleContexts(ArrayContext.class);
		}
		public ArrayContext array(int i) {
			return getRuleContext(ArrayContext.class,i);
		}
		public List<StructContext> struct() {
			return getRuleContexts(StructContext.class);
		}
		public StructContext struct(int i) {
			return getRuleContext(StructContext.class,i);
		}
		public List<VardefContext> vardef() {
			return getRuleContexts(VardefContext.class);
		}
		public VardefContext vardef(int i) {
			return getRuleContext(VardefContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__29))) != 0)) {
				{
				setState(57);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(44);
					((ProgramContext)_localctx).fundef = fundef();
					_localctx.ast.addDefinition(((ProgramContext)_localctx).fundef.ast);
					}
					break;
				case 2:
					{
					{
					setState(47);
					((ProgramContext)_localctx).vardef = vardef();
					_localctx.ast.addDefinition(((ProgramContext)_localctx).vardef.ast);
					       _localctx.ast.addDefinitions(((ProgramContext)_localctx).vardef.astl);
					setState(49);
					match(T__0);
					}
					}
					break;
				case 3:
					{
					setState(51);
					((ProgramContext)_localctx).array = array();
					_localctx.ast.addDefinition(((ProgramContext)_localctx).array.ast);
					}
					break;
				case 4:
					{
					setState(54);
					((ProgramContext)_localctx).struct = struct();
					_localctx.ast.addDefinition(((ProgramContext)_localctx).struct.ast);
					}
					break;
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ast.statements.Statement ast;
		public AsignationContext asignation;
		public FuninvContext funinv;
		public DevuelveContext devuelve;
		public StructContext struct;
		public ArrayContext array;
		public WriteContext write;
		public ReadContext read;
		public MientrasContext mientras;
		public SiContext si;
		public AsignationContext asignation() {
			return getRuleContext(AsignationContext.class,0);
		}
		public DevuelveContext devuelve() {
			return getRuleContext(DevuelveContext.class,0);
		}
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public MientrasContext mientras() {
			return getRuleContext(MientrasContext.class,0);
		}
		public SiContext si() {
			return getRuleContext(SiContext.class,0);
		}
		public FuninvContext funinv() {
			return getRuleContext(FuninvContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(62);
				((StatementContext)_localctx).asignation = asignation();
				((StatementContext)_localctx).ast = ((StatementContext)_localctx).asignation.ast;
				}
				break;
			case 2:
				{
				{
				setState(65);
				((StatementContext)_localctx).funinv = funinv();
				((StatementContext)_localctx).ast = ((StatementContext)_localctx).funinv.ast;
				setState(67);
				match(T__0);
				}
				}
				break;
			case 3:
				{
				setState(69);
				((StatementContext)_localctx).devuelve = devuelve();
				((StatementContext)_localctx).ast = ((StatementContext)_localctx).devuelve.ast;
				}
				break;
			case 4:
				{
				setState(72);
				((StatementContext)_localctx).struct = struct();
				((StatementContext)_localctx).ast = ((StatementContext)_localctx).struct.ast;
				}
				break;
			case 5:
				{
				setState(75);
				((StatementContext)_localctx).array = array();
				((StatementContext)_localctx).ast = ((StatementContext)_localctx).array.ast;
				}
				break;
			case 6:
				{
				setState(78);
				((StatementContext)_localctx).write = write();
				((StatementContext)_localctx).ast = ((StatementContext)_localctx).write.ast;
				}
				break;
			case 7:
				{
				setState(81);
				((StatementContext)_localctx).read = read();
				((StatementContext)_localctx).ast = ((StatementContext)_localctx).read.ast;
				}
				break;
			case 8:
				{
				setState(84);
				((StatementContext)_localctx).mientras = mientras();
				((StatementContext)_localctx).ast = ((StatementContext)_localctx).mientras.ast;
				}
				break;
			case 9:
				{
				setState(87);
				((StatementContext)_localctx).si = si();
				((StatementContext)_localctx).ast = ((StatementContext)_localctx).si.ast;
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardefContext extends ParserRuleContext {
		public VarDef ast;
		public List<AbstractDefinition> astl = new ArrayList<AbstractDefinition>();;
		public PrimitiveTypeContext primitiveType;
		public Token id1;
		public Token id2;
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(CmmParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CmmParser.ID, i);
		}
		public VardefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardef; }
	}

	public final VardefContext vardef() throws RecognitionException {
		VardefContext _localctx = new VardefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_vardef);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			((VardefContext)_localctx).primitiveType = primitiveType();
			setState(93);
			((VardefContext)_localctx).id1 = match(ID);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(94);
					match(T__1);
					setState(95);
					((VardefContext)_localctx).id2 = match(ID);
					_localctx.astl.add(new VarDef(((VardefContext)_localctx).id2.getLine(),((VardefContext)_localctx).id2.getCharPositionInLine(),(((VardefContext)_localctx).id2!=null?((VardefContext)_localctx).id2.getText():null),((VardefContext)_localctx).primitiveType.ast));
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			((VardefContext)_localctx).ast = new VarDef(((VardefContext)_localctx).id1.getLine(),((VardefContext)_localctx).id1.getCharPositionInLine(),(((VardefContext)_localctx).id1!=null?((VardefContext)_localctx).id1.getText():null),((VardefContext)_localctx).primitiveType.ast);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Expression ast;
		public ExprContext e1;
		public Token ID;
		public Token REAL_CONSTANT;
		public Token INT_CONSTANT;
		public Token CHAR_CONSTANT;
		public PrimitiveTypeContext primitiveType;
		public ExprContext expr;
		public ExprContext e2;
		public Token s;
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public TerminalNode REAL_CONSTANT() { return getToken(CmmParser.REAL_CONSTANT, 0); }
		public TerminalNode INT_CONSTANT() { return getToken(CmmParser.INT_CONSTANT, 0); }
		public TerminalNode CHAR_CONSTANT() { return getToken(CmmParser.CHAR_CONSTANT, 0); }
		public PrimitiveTypeContext primitiveType() {
			return getRuleContext(PrimitiveTypeContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		return expr(0);
	}

	private ExprContext expr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprContext _localctx = new ExprContext(_ctx, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(105);
				((ExprContext)_localctx).ID = match(ID);
				((ExprContext)_localctx).ast = new Variable(((ExprContext)_localctx).ID.getLine(),((ExprContext)_localctx).ID.getCharPositionInLine(),(((ExprContext)_localctx).ID!=null?((ExprContext)_localctx).ID.getText():null));
				}
				break;
			case 2:
				{
				setState(107);
				((ExprContext)_localctx).REAL_CONSTANT = match(REAL_CONSTANT);
				((ExprContext)_localctx).ast =  new LiteralReal(((ExprContext)_localctx).REAL_CONSTANT.getLine(),((ExprContext)_localctx).REAL_CONSTANT.getCharPositionInLine(),Double.parseDouble(((ExprContext)_localctx).REAL_CONSTANT.getText()));
				}
				break;
			case 3:
				{
				setState(109);
				((ExprContext)_localctx).INT_CONSTANT = match(INT_CONSTANT);
				((ExprContext)_localctx).ast =  new LiteralInteger(((ExprContext)_localctx).INT_CONSTANT.getLine(),((ExprContext)_localctx).INT_CONSTANT.getCharPositionInLine(),java.lang.Integer.parseInt(((ExprContext)_localctx).INT_CONSTANT.getText()));
				}
				break;
			case 4:
				{
				setState(111);
				((ExprContext)_localctx).CHAR_CONSTANT = match(CHAR_CONSTANT);

				                        char a=((ExprContext)_localctx).CHAR_CONSTANT.getText().charAt(1);
				                        if(((ExprContext)_localctx).CHAR_CONSTANT.getText().contains("\\n"))
				                            a='\n';
				                        else if(((ExprContext)_localctx).CHAR_CONSTANT.getText().contains("\\t"))
				                            a='\t';
				                        ((ExprContext)_localctx).ast =  new LiteralCharacter(((ExprContext)_localctx).CHAR_CONSTANT.getLine(),((ExprContext)_localctx).CHAR_CONSTANT.getCharPositionInLine(),a);
				                        
				}
				break;
			case 5:
				{
				setState(113);
				match(T__2);
				setState(114);
				((ExprContext)_localctx).primitiveType = primitiveType();
				setState(115);
				match(T__3);
				setState(116);
				((ExprContext)_localctx).expr = expr(10);
				((ExprContext)_localctx).ast =  new Cast(0,0,((ExprContext)_localctx).expr.ast,((ExprContext)_localctx).primitiveType.ast);
				}
				break;
			case 6:
				{
				setState(119);
				((ExprContext)_localctx).ID = match(ID);
				setState(120);
				match(T__6);
				setState(121);
				((ExprContext)_localctx).e2 = ((ExprContext)_localctx).expr = expr(8);
				((ExprContext)_localctx).ast = new AccesoCampos(0,0,new Variable(((ExprContext)_localctx).ID.getLine(),((ExprContext)_localctx).ID.getCharPositionInLine(),(((ExprContext)_localctx).ID!=null?((ExprContext)_localctx).ID.getText():null)),((ExprContext)_localctx).e2.ast);
				}
				break;
			case 7:
				{
				setState(124);
				match(T__7);
				setState(125);
				((ExprContext)_localctx).expr = expr(7);
				((ExprContext)_localctx).ast =  new MenosUnario(0,0,((ExprContext)_localctx).expr.ast);
				}
				break;
			case 8:
				{
				setState(128);
				match(T__18);
				setState(129);
				((ExprContext)_localctx).expr = expr(3);
				((ExprContext)_localctx).ast =  new Not(0,0,((ExprContext)_localctx).expr.ast);
				}
				break;
			case 9:
				{
				setState(132);
				match(T__2);
				setState(133);
				((ExprContext)_localctx).expr = expr(0);
				setState(134);
				match(T__3);
				((ExprContext)_localctx).ast = ((ExprContext)_localctx).expr.ast;
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(167);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(165);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(139);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(140);
						((ExprContext)_localctx).s = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) ) {
							((ExprContext)_localctx).s = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(141);
						((ExprContext)_localctx).e2 = ((ExprContext)_localctx).expr = expr(7);
						((ExprContext)_localctx).ast =  new Aritmetic(0,0,(((ExprContext)_localctx).s!=null?((ExprContext)_localctx).s.getText():null),((ExprContext)_localctx).e1.ast,((ExprContext)_localctx).e2.ast);
						}
						break;
					case 2:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(144);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(145);
						((ExprContext)_localctx).s = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__7 || _la==T__11) ) {
							((ExprContext)_localctx).s = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(146);
						((ExprContext)_localctx).e2 = ((ExprContext)_localctx).expr = expr(6);
						((ExprContext)_localctx).ast =  new Aritmetic(0,0,(((ExprContext)_localctx).s!=null?((ExprContext)_localctx).s.getText():null),((ExprContext)_localctx).e1.ast,((ExprContext)_localctx).e2.ast);
						}
						break;
					case 3:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(149);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(150);
						((ExprContext)_localctx).s = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17))) != 0)) ) {
							((ExprContext)_localctx).s = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(151);
						((ExprContext)_localctx).e2 = ((ExprContext)_localctx).expr = expr(5);
						((ExprContext)_localctx).ast =  new Comparation(0,0,(((ExprContext)_localctx).s!=null?((ExprContext)_localctx).s.getText():null),((ExprContext)_localctx).e1.ast,((ExprContext)_localctx).e2.ast);
						}
						break;
					case 4:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(154);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(155);
						((ExprContext)_localctx).s = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==T__19 || _la==T__20) ) {
							((ExprContext)_localctx).s = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(156);
						((ExprContext)_localctx).e2 = ((ExprContext)_localctx).expr = expr(3);
						((ExprContext)_localctx).ast =  new Logic(0,0,(((ExprContext)_localctx).s!=null?((ExprContext)_localctx).s.getText():null),((ExprContext)_localctx).e1.ast,((ExprContext)_localctx).e2.ast);
						}
						break;
					case 5:
						{
						_localctx = new ExprContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expr);
						setState(159);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(160);
						match(T__4);
						setState(161);
						((ExprContext)_localctx).e2 = ((ExprContext)_localctx).expr = expr(0);
						setState(162);
						match(T__5);
						((ExprContext)_localctx).ast = new AccesoArray(0,0,((ExprContext)_localctx).e1.ast,((ExprContext)_localctx).e2.ast);
						}
						break;
					}
					} 
				}
				setState(169);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
